Add coming soon page for launch

--- a/html/home.html
+++ b/html/home.html
@@ -82,8 +82,7 @@
         </div>
         <div id="footer2">
             <ul>
-                <li> PROJECT MUSIC CONNECTOR  <i> c/o Alice Barbe </i> </li>
-                <li> +1 404-819-5374 </li>
+                <li> PROJECT MUSIC CONNECTOR </li>
                 <li> projectmusicconnector@gmail.com  </li>
             </ul>
         </div>
