--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 
-<html lang="en" xmlns="http://www.w3.org/1999/xhtml">
+<html lang="en">
+    
 <head>
     <meta charset="utf-8" />
 </head>
@@ -10,3 +11,5 @@
 <p> Project Music Connector </p>
 <p> <i> projectmusicconnector@gmail.com </i> <p>
 </body>
+    
+</html>
