Added contact page

--- a/html/home.html
+++ b/html/home.html
@@ -19,7 +19,8 @@
 <div id="wrapper">
     <div id="navbar">
             <div id="navbarLogo">
-                <img src="../images/logo.png">
+                <a href="home.html" >
+				<img src="../images/logo.png"></a>
             </div>
             <div id="navbarMenu">
                 <ul>
