lots of new content

--- a/html/people.html
+++ b/html/people.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Contact </title>
+    <title> Project Music Connector </title>
     <link rel="stylesheet" type="text/css" href="../css/stylePeople.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Share" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet"> 
@@ -25,7 +26,13 @@
             <div id="navbarMenu">
                 <ul>
                     <li> <a href="about.html">ABOUT</a> </li>
-                    <li> <a href="instruments.html">INSTRUMENTS</a> </li>
+                    <li> <a href="instruments.html">INSTRUMENTS</a> 
+                        <ul>
+                        <li><a href="instruments.html">JELLO PIANO</a></li>
+                        <li><a href="opticalTurntable.html">OPTICAL TURNTABLE</a></li>
+                        <li><a href="maxMartenot.html">MAX MARTENOT</a></li>
+                        <li><a href="pastInstruments.html">PAST INSTRUMENTS</a></li>
+                        </ul></li>
                     <li> <a href="people.html">PEOPLE</a> </li>
                     <li> <a href="pastEvents.html">PAST EVENTS</a> </li>
                     <li> <a href="contact.html">CONTACT</a> </li>
@@ -44,14 +51,17 @@
             <h1> Meet our makers! </h1>
         </div>
         
-        <div id="links">
-            <div class="linkCard">
+        <div id="links1">
+            <div class="imgCard">
+                <img src="../images/alice.jpg">
+            </div>
+            <div id="linkCard1">
                 <h2> Alice Barbe </h2>
-                <p> projectmusicconnector@gmail.com </p>
+                <p>  </p>
             </div>
 		</div>
-		<div id="links">
-			<div class="linkCard">
+		<div id="links2">
+			<div id="linkCard2">
 				<h2> Beatriz Fusaro Guimaraes </h2>
 				<a href="https://www.linkedin.com/in/beatriz-fusaro-guimaraes-5240a2136/"> linkedIn </a>
 				<p> I am a student at Georgia Tech pursuing a BS in Mechanical Engineering with a focus on 
@@ -64,34 +74,13 @@
 				<img src="../images/beatriz.png">
 			</div>
 		</div>
-		<div id="links">
-			<div class="linkCard">
-                <h2> Asimm Hirani </h2>
-                <p> projectmusicconnector@gmail.com </p>
+        <div id="links1">
+            <div class="imgCard">
+                <img src="../images/sam.jpg">
             </div>
-			<div class="linkCard">
-                <h2> Kevin Choi </h2>
-                <p> projectmusicconnector@gmail.com </p>
-            </div>
-			<div class="linkCard">
+			<div id="linkCard1">
                 <h2> Sam Yeomens </h2>
-                <p> projectmusicconnector@gmail.com </p>
-            </div>
-			<div class="linkCard">
-                <h2> Malvika Upadhyaya </h2>
-                <p> projectmusicconnector@gmail.com </p>
-            </div>
-			<div class="linkCard">
-                <h2> Abhirav Joshi </h2>
-                <p> projectmusicconnector@gmail.com </p>
-            </div>
-			<div class="linkCard">
-                <h2> Elisha Mang </h2>
-                <p> projectmusicconnector@gmail.com </p>
-            </div>
-			<div class="linkCard">
-                <h2> Mihir Parshionikar </h2>
-                <p> projectmusicconnector@gmail.com </p>
+                <p> Sam is a fourth-year Computer Engineering student at Georgia Tech. His choice of major became clear to him one day while playing Minecraft. No joke. Minecraft changed his life. In his free time, Sam loves to pilot hit quad copter. (That was a joke. Free time is a myth.) </p>
             </div>
         </div>
 		<div id="pageText">
