--- a/html/contact.html
+++ b/html/contact.html
@@ -5,8 +5,9 @@
     <meta charset="utf-8" />
     
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title> Contact </title>
+    <title> Project Music Connector </title>
     <link rel="stylesheet" type="text/css" href="../css/styleContact.css" />
+    <link rel="stylesheet" type="text/css" href="../css/style.css" />
     <link href="https://fonts.googleapis.com/css?family=Black+Ops+One" rel="stylesheet"> 
     <link href="https://fonts.googleapis.com/css?family=Share" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Megrim" rel="stylesheet"> 
@@ -25,7 +26,13 @@
             <div id="navbarMenu">
                 <ul>
                     <li> <a href="about.html">ABOUT</a> </li>
-                    <li> <a href="instruments.html">INSTRUMENTS</a> </li>
+                    <li> <a href="instruments.html">INSTRUMENTS</a> 
+                        <ul>
+                        <li><a href="instruments.html">JELLO PIANO</a></li>
+                        <li><a href="opticalTurntable.html">OPTICAL TURNTABLE</a></li>
+                        <li> <a href="maxMartenot.html">MAX MARTENOT 2.0</a></li>
+                        <li> <a href="pastInstruments.html">PAST INSTRUMENTS</a></li>
+                        </ul></li>
                     <li> <a href="people.html">PEOPLE</a> </li>
                     <li> <a href="pastEvents.html">PAST EVENTS</a> </li>
                     <li> <a href="contact.html">CONTACT</a> </li>
