--- a/home.html
+++ b/home.html
@@ -77,7 +77,7 @@ __________.__                                    .___          /\ __            
             
             <div class="linkCard">
                 <a href="instruments.html">    
-                <img src="images/jello_piano_aso.jpg">
+                <img src="images/jello_piano_aso.JPG">
                 <h2> INSTRUMENTS </h2>
                 Explore our instruments and their inspirations, building processes, and the science behind it all → </a>
             </div>
