--- a/instruments.html
+++ b/instruments.html
@@ -65,7 +65,7 @@
             <p> Jello is water-based, so it conducts electricity. Each key of jello is connected to an Arduino pin with a copper wire and copper strip. The jello on the tail of the piano is connected to two wires which lead to the left and right channels of the speaker via its audio jack. The Arduino ground is connected to the speaker's ground. When you touch the jello on the tail of the piano and one of the keys, your body completes the electrical circuit, and we hear a tone as a result of the circuit being completed. </p>
             
             <h2> TESTIMONIALS </h2>
-            <img src="images/jelloPiano_DES.jpg">
+            <img src="images/jelloPiano_DES.JPG">
             <p> <i> The jello piano activity allowed our students to experience two learning concepts: conductivity of electricity, and the sounding of musical patterns. <br> <br>
             Students explored how electric currents are responsible for the production of sound by observing and handling the components of the jello piano board: the computer connected to the wires, the spoon attached to a wire, the jello keys on top of the wires, and all of that connected to the speakers. <br> <br>
             Students were able to experience the process by handling the spoon and placing it, and their fingers on the other hand, on the keys of their choice and observing what happens. They either played random jello keys, or they played a scale pattern, and even short songs such as Hot Cross Buns. All students were fascinated by the electric sound, the idea of making their own sound patterns, and the idea of an electric current making the whole process possible. <br> <br>
