more capitalization issues

--- a/pastInstruments.html
+++ b/pastInstruments.html
@@ -68,7 +68,7 @@
             
             <h1 id="WrapBeats"> WRAPBEATS </h1>
             <p> WrapBeats is an instrument that lets you string together notes in order to create different melodies and visual patterns. It is constructed using the Capacitive sensing library for Arduino, combining that with the music abilities of Processing to create a dynamic instrument that can change sounds as you play it. WrapBeats is licensed under Creative Commons Attribution-NonCommercial-ShareAlike 2.5 Generic, and instructions and documentation on how to build one are available <a href="http://www.instructables.com/id/Wrap-Beats-Capsense-Arduino-Instrument/">here</a>. </p>
-            <img src="images/WrapBeats.jpg">
+            <img src="images/WrapBeats.JPG">
             <p> Designed by Lucy Matchett. Built by Alice Barbe and Beatriz Fusaro.
             <br> <br> <br>
         </div>
