Add github link to icon

--- a/contact.html
+++ b/contact.html
@@ -68,7 +68,7 @@
 </div>
     <div id="footer">
         <div id="footer1">
-            <i class="fa fa-github" style="font-size:64px;color:teal;padding-top:26px"></i>
+            <a href="https://github.com/project-music-connector"><i class="fa fa-github" style="font-size:64px;color:teal;padding-top:26px"></i></a>
         </div>
         <div id="footer2">
             <ul>
