--- a/home.html
+++ b/home.html
@@ -101,7 +101,7 @@ __________.__                                    .___          /\ __            
 </div>
     <div id="footer">
         <div id="footer1">
-            <i class="fa fa-github" style="font-size:64px;color:teal;padding-top:26px"></i>
+            <a href="https://github.com/project-music-connector"><i class="fa fa-github" style="font-size:64px;color:teal;padding-top:26px"></i></a>
         </div>
         <div id="footer2">
             <ul>
