--- a/people.html
+++ b/people.html
@@ -62,7 +62,6 @@
 		<div id="links2">
 			<div id="linkCard2">
 				<h2> Beatriz Fusaro Guimaraes </h2>
-				<a href="https://www.linkedin.com/in/beatriz-fusaro-guimaraes-5240a2136/"> linkedIn </a>
 				<p> I am a student at Georgia Tech pursuing a BS in Mechanical Engineering with a focus on automation and robotics and a minor in Computer Science. Creating new products is my true passion, and I don't spend a day without a project to work on. The machine shop is my second home, but I also love coding and design. If there is a new concept that needs development, you can count on me!</p>
 			</div>
 			<div class="imgCard">
@@ -71,6 +70,24 @@
 		</div>
         <div id="links1">
             <div class="imgCard">
+                <img src="images/asimm.png">
+            </div>
+            <div id="linkCard1">
+                <h2> Asimm Hirani </h2>
+                <p> Mechanical Engineering student at Georgia Tech who enjoys the rush of building and making anything under the sun. Asimm enjoys spending his time outside of class engineering electric cars for the Formula SAE team and rockets for the Yellow Jacket Space Program. Asimm functions on Music Connector as a mechanical designer and prototype builder. </p>
+			</div>
+		</div>
+		<div id="links2">
+			<div id="linkCard2">
+				<h2> Kevin Choi </h2>
+				<p> Kevin is a 3rd-year undergraduate student majoring in Mechanical Engineering. As a student with a deep interest in robotics and autonomous systems, Kevin has worked with the Battlebots team as well as the research team for agricultural robotics. As a result of working with these teams, he has gathered experience in structural design and multidisciplinary collaboration- for example, creating an elegant solution for the drum weapon for Battlebots that reduces the number of modes of failure as well as collaborating with teams specializing in electrical, mechanical, and optical properties to create a robotic gripper that encompasses all of these characteristics. Through the competition, Kevin seeks to learn new skills as well as apply the skills he has accumulated through his career.</p>
+			</div>
+			<div class="imgCard">
+				<img src="images/beatriz.png">
+			</div>
+		</div>
+		<div id="links1">
+            <div class="imgCard">
                 <img src="images/sam.jpg">
             </div>
 			<div id="linkCard1">
@@ -78,10 +95,47 @@
                 <p> Sam is a fourth-year Computer Engineering student at Georgia Tech. His choice of major became clear to him one day while playing Minecraft. No joke. Minecraft changed his life. In his free time, Sam loves to pilot hit quad copter. (That was a joke. Free time is a myth.) </p>
             </div>
         </div>
+		<div id="links2">
+			<div id="linkCard2">
+				<h2> Abhirav Joshi </h2>
+				<p> Abhirav is a third year student at Georgia Tech who has a passion for music since he was 9 years old. He frequently composes music and loves to integrate his artistic passion into his technical background.</p>
+			</div>
+			<div class="imgCard">
+				<img src="images/abhirav.jpg">
+			</div>
+		</div>
+		<div id="links1">
+            <div class="imgCard">
+                <img src="images/mihir.jpg">
+            </div>
+			<div id="linkCard1">
+                <h2> Mihir Parshionikar </h2>
+                <p> I am a third year computer science student who is passionate about all things music.  I am deeply interested in the intersection between software engineering and music creation.  I’ve given a TEDx talk discussing music complexity, especially in modern pop music, and how sound design can be used creatively to elicit emotions of the listeners.  Simply put, I’m a huge music geek, audiophile, etc.  In addition to my academic endeavors and music tech projects, I am 1/2 of the hip-hop duo SOLANTA, which I rap and produce for.  Check out our stuff here: https://open.spotify.com/artist/6ubpvAenqm2FYa742qX8PB </p>
+			</div>
+        </div>
+		<div id="links2">
+			<div id="linkCard2">
+				<h2> Abhirav Joshi </h2>
+				<p> Abhirav is a third year student at Georgia Tech who has a passion for music since he was 9 years old. He frequently composes music and loves to integrate his artistic passion into his technical background.</p>
+			</div>
+			<div class="imgCard">
+				<img src="images/abhirav.jpg">
+			</div>
+		</div>
+		<div id="links1">
+            <div class="imgCard">
+                <img src="images/elisha.jpg">
+            </div>
+			<div id="linkCard1">
+                <h2> Elisha Mang </h2>
+                <p> I am a 2nd year EE student at Georgia Institute of Technology. I enjoy playing electronic games such as Dota 2 and Counter-Strike. I enjoy listening to music while doing basically anything. I wanna explore more about what I can and what I want to do with life.</p>
+				</div>
+        </div>
 		<div id="pageText">
             <p></p>
         </div>
     </div>
+	
 </div>
     <div id="footer">
         <div id="footer1">
