added people's bios

--- a/people.html
+++ b/people.html
@@ -115,11 +115,11 @@
         </div>
 		<div id="links2">
 			<div id="linkCard2">
-				<h2> Abhirav Joshi </h2>
-				<p> Abhirav is a third year student at Georgia Tech who has a passion for music since he was 9 years old. He frequently composes music and loves to integrate his artistic passion into his technical background.</p>
+				<h2> Travis Bostick </h2>
+				<p> 3rd year student, CS/CM Major</p>
 			</div>
 			<div class="imgCard">
-				<img src="images/abhirav.jpg">
+				<img src="images/travis.jpg">
 			</div>
 		</div>
 		<div id="links1">
