--- a/index.html
+++ b/index.html
@@ -6,10 +6,8 @@
     <meta charset="utf-8" />
 </head>
 
-<body>
-<h1> Website under constrution... Please check back in a few days! </h1>
-<p> Project Music Connector </p>
-<p> <i> projectmusicconnector@gmail.com </i> <p>
-</body>
+<script>
+window.location = "home.html";
+</script>
     
 </html>
