--- a/people.html
+++ b/people.html
@@ -74,16 +74,16 @@
             </div>
             <div id="linkCard1">
                 <h2> Asimm Hirani </h2>
-                <p> Mechanical Engineering student at Georgia Tech who enjoys the rush of building and making anything under the sun. Asimm enjoys spending his time outside of class engineering electric cars for the Formula SAE team and rockets for the Yellow Jacket Space Program. Asimm functions on Music Connector as a mechanical designer and prototype builder. </p>
+                <p> Asimm is Mechanical Engineering student at Georgia Tech who enjoys the rush of building and making anything under the sun. Asimm enjoys spending his time outside of class engineering electric cars for the Formula SAE team and rockets for the Yellow Jacket Space Program. Asimm functions on Music Connector as a mechanical designer and prototype builder. </p>
 			</div>
 		</div>
 		<div id="links2">
 			<div id="linkCard2">
 				<h2> Kevin Choi </h2>
-				<p> Kevin is a 3rd-year undergraduate student majoring in Mechanical Engineering. As a student with a deep interest in robotics and autonomous systems, Kevin has worked with the Battlebots team as well as the research team for agricultural robotics. As a result of working with these teams, he has gathered experience in structural design and multidisciplinary collaboration- for example, creating an elegant solution for the drum weapon for Battlebots that reduces the number of modes of failure as well as collaborating with teams specializing in electrical, mechanical, and optical properties to create a robotic gripper that encompasses all of these characteristics. Through the competition, Kevin seeks to learn new skills as well as apply the skills he has accumulated through his career.</p>
+				<p> Kevin is a 3rd-year undergraduate student majoring in Mechanical Engineering. As a student with a deep interest in robotics and autonomous systems, Kevin has worked with the Battlebots team as well as the research team for agricultural robotics. As a result of working with these teams, he has gathered experience in structural design and multidisciplinary collaboration- for example, creating an elegant solution for the drum weapon for Battlebots that reduces the number of modes of failure as well as collaborating with teams specializing in electrical, mechanical, and optical properties to create a robotic gripper that encompasses all of these characteristics.</p>
 			</div>
 			<div class="imgCard">
-				<img src="images/beatriz.png">
+				<img src="images/kevin.jpg">
 			</div>
 		</div>
 		<div id="links1">
@@ -97,22 +97,22 @@
         </div>
 		<div id="links2">
 			<div id="linkCard2">
-				<h2> Abhirav Joshi </h2>
-				<p> Abhirav is a third year student at Georgia Tech who has a passion for music since he was 9 years old. He frequently composes music and loves to integrate his artistic passion into his technical background.</p>
-			</div>
-			<div class="imgCard">
-				<img src="images/abhirav.jpg">
-			</div>
-		</div>
-		<div id="links1">
-            <div class="imgCard">
-                <img src="images/mihir.jpg">
-            </div>
-			<div id="linkCard1">
                 <h2> Mihir Parshionikar </h2>
                 <p> I am a third year computer science student who is passionate about all things music.  I am deeply interested in the intersection between software engineering and music creation.  I’ve given a TEDx talk discussing music complexity, especially in modern pop music, and how sound design can be used creatively to elicit emotions of the listeners.  Simply put, I’m a huge music geek, audiophile, etc.  In addition to my academic endeavors and music tech projects, I am 1/2 of the hip-hop duo SOLANTA, which I rap and produce for.  Check out our stuff here: https://open.spotify.com/artist/6ubpvAenqm2FYa742qX8PB </p>
 			</div>
+            <div class="imgCard">
+                <img src="images/mihir.jpg">
+            </div>
         </div>
+		<div id="links1">
+			<div class="imgCard">
+				<img src="images/abhirav.jpg">
+			</div>
+			<div id="linkCard1">
+				<h2> Abhirav Joshi </h2>
+				<p> Abhirav is a third year student at Georgia Tech who has a passion for music since he was 9 years old. He frequently composes music and loves to integrate his artistic passion into his technical background.</p>
+			</div>
+		</div>
 		<div id="links2">
 			<div id="linkCard2">
 				<h2> Travis Bostick </h2>
