--- a/people.html
+++ b/people.html
@@ -122,14 +122,23 @@
 				<img src="images/travis.jpg">
 			</div>
 		</div>
-		<div id="links1">
+        <div id="links1">
+            <div class="imgCard">
+                <img src="images/malvika.jpg">
+            </div>
+            <div id="linkCard1">
+                <h2> Malvika Upadhyaya </h2>
+                <p> Malvika is a 3rd year mechanical engineering student who wants to learn how to integrate technology and music to create the most unique sounds. </p>
+            </div>
+        </div>
+		<div id="links2">
+			<div id="linkCard2">
+                <h2> Elisha Mang </h2>
+                <p> I am a 2nd year EE student at Georgia Institute of Technology. I enjoy playing electronic games such as Dota 2 and Counter-Strike. I enjoy listening to music while doing basically anything. I wanna explore more about what I can and what I want to do with life.</p>
+			</div>
             <div class="imgCard">
                 <img src="images/elisha.jpg">
             </div>
-			<div id="linkCard1">
-                <h2> Elisha Mang </h2>
-                <p> I am a 2nd year EE student at Georgia Institute of Technology. I enjoy playing electronic games such as Dota 2 and Counter-Strike. I enjoy listening to music while doing basically anything. I wanna explore more about what I can and what I want to do with life.</p>
-				</div>
         </div>
 		<div id="pageText">
             <p></p>
