added ricardo's bio

--- a/people.html
+++ b/people.html
@@ -140,6 +140,15 @@
                 <img src="images/elisha.jpg">
             </div>
         </div>
+		<div id="links1">
+            <div class="imgCard">
+                <img src="images/ricardo.JPG">
+            </div>
+            <div id="linkCard1">
+                <h2> Ricardo Lages </h2>
+                <p> Ricardo is a 3rd year Computer Engineering student at Georgia Tech minoring in Computer Science and Economics. Originally from Brazil, he came to US driven by his desire to connect with like-minded students and develop the skills to succeed in the current global market. His technology background intrisically relates to his passion for electronic music as a mean of engaging people with music through creative production and innovative instruments. </p>
+            </div>
+        </div>
 		<div id="pageText">
             <p></p>
         </div>
