Make mobile browsing slightly less painful

--- a/home.html
+++ b/home.html
@@ -17,8 +17,7 @@ __________.__                                    .___          /\ __            
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=1024">
     <title> Project Music Connector </title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
     <link rel="stylesheet" type="text/css" href="css/styleHome.css" />
@@ -72,7 +71,7 @@ __________.__                                    .___          /\ __            
                 <a href="about.html">
                 <img src="images/jelloPiano_beatrizMakerFaire2015.jpg">
                 <h2> ABOUT </h2>
-                Find out more about Project Music Connector and its mission → </a>
+                Find out more about Project Music Connector, our vision, our instruments, and our history. → </a>
             </div>
             
             <div class="linkCard">
