--- a/people.html
+++ b/people.html
@@ -3,8 +3,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" />
-    
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="viewport" content="width=1024">
     <title> Project Music Connector </title>
     <link rel="stylesheet" type="text/css" href="css/stylePeople.css" />
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -74,7 +73,7 @@
             </div>
             <div id="linkCard1">
                 <h2> Asimm Hirani </h2>
-                <p> Asimm is Mechanical Engineering student at Georgia Tech who enjoys the rush of building and making anything under the sun. Asimm enjoys spending his time outside of class engineering electric cars for the Formula SAE team and rockets for the Yellow Jacket Space Program. Asimm functions on Music Connector as a mechanical designer and prototype builder. </p>
+                <p> Asimm is a Mechanical Engineering student at Georgia Tech who enjoys the rush of building and making anything under the sun. Asimm enjoys spending his time outside of class engineering electric cars for the Formula SAE team and rockets for the Yellow Jacket Space Program. Asimm functions on Project Music Connector as a mechanical designer and prototype builder. </p>
 			</div>
 		</div>
 		<div id="links2">
