--- a/home.html
+++ b/home.html
@@ -64,6 +64,8 @@ __________.__                                    .___          /\ __            
         <div id="pageText">
             <h1> We explore the connections between engineering and music.  </h1>
             <p> We experiment with ways in which technology can allow people without music background to play music, while using music-making as a tool to teach people about technology. </p>
+            <br>
+            <h1> Come see us at MakerFaire Atlanta 2017 (Oct 22) and the Atlanta MakEdu Conference for Educators (Oct 21)! </h1>
         </div>
         
         <div id="links">
