Advanced Circuits sponsorship

--- a/about.html
+++ b/about.html
@@ -62,7 +62,10 @@
 			Alice Barbe, Kevin Choi, Beatriz Fusaro, Asimm Hirani, Abhirav Joshi, Elisha Mang, Mihir Parshionikar, 
 			Malvika Upadhyaya, and Samuel Yeomans. </p>
             <br>
-            <p> Special thanks to the Georgia Tech School of Mathematics, Center for Music Technology, College of Science, Society for Women Engineers, Under the Couch, and GT Professors Joseph Bankoff and Lew Lefton.
+            <p> Special thanks to the Georgia Tech School of Mathematics, Center for Music Technology, College of Science, Society for Women Engineers, Under the Couch, and GT Professors Joseph Bankoff and Lew Lefton. </p>
+            <br>
+            <p> Project Music Connector's Optical Turntable is proudly sponsored by Advanced Circuits. </p>
+            <img src="images/advanced_circuits.jpg"></img>
         </div>
 		<div id="pageText">
             <p></p>
