--- a/opticalTurntable.html
+++ b/opticalTurntable.html
@@ -62,6 +62,9 @@
             <img src="images/infrared_sensors.jpg">
             
             <br> <br> <br>
+            <p> Project Music Connector's Optical Turntable is proudly sponsored by Advanced Circuits.
+            <img src="images/advanced_circuits.jpg"></img> </p>
+            <br> <br>
         </div>
     
     </div>
