--- a/home.html
+++ b/home.html
@@ -65,7 +65,7 @@ __________.__                                    .___          /\ __            
             <h1> We explore the connections between engineering and music.  </h1>
             <p> We experiment with ways in which technology can allow people without music background to play music, while using music-making as a tool to teach people about technology. </p>
             <br>
-            <h1> Come see us at MakerFaire Atlanta 2017 (Oct 22) and the Atlanta MakEdu Conference for Educators (Oct 21)! </h1>
+            <h1> Come see us at <a href="http://atlanta.makerfaire.com/" style="color: black;">MakerFaire Atlanta 2017</a> (Oct 22) and the <a href="http://makedu.weebly.com/conference.html" style="color: black;">Atlanta MakEdu Conference for Educators</a> (Oct 21)! </h1>
         </div>
         
         <div id="links">
