update jello piano prototyping

--- a/instruments.html
+++ b/instruments.html
@@ -59,6 +59,9 @@
             
             <h2> A RAPID PROTOTYPING MASTERPIECE </h2>
             <img src="images/jelloPiano_machining.jpg">
+            <p>Machining the Jello Piano keys using a CNC mill in Georgia Tech's Invention Studio.</p> 
+            <img src="images/jelloPiano_jigsaw.jpg">
+            <p>Travis cutting the Jello Piano wooden base using a jigsaw at Georgia Tech's Invention Studio.</p>
             
             <h2> THE SCIENCE BEHIND </h2>
             <p> Jello is water-based, so it conducts electricity. Each key of jello is connected to an Arduino pin with a copper wire and copper strip. The jello on the tail of the piano is connected to two wires which lead to the left and right channels of the speaker via its audio jack. The Arduino ground is connected to the speaker's ground. When you touch the jello on the tail of the piano and one of the keys, your body completes the electrical circuit, and we hear a tone as a result of the circuit being completed. </p>
