--- a/index.html
+++ b/index.html
@@ -4,10 +4,20 @@
     
 <head>
     <meta charset="utf-8" />
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-108496813-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-108496813-1');
+    </script>
 </head>
 
 <script>
 window.location = "home.html";
 </script>
-    
+
 </html>
