--- a/contact.html
+++ b/contact.html
@@ -52,7 +52,7 @@
         <div id="links">
             <div class="linkCard">
                 <h2> E-mail </h2>
-                <p> projectmusicconnector@gmail.com </p>
+                <p> <a href="mailto:projectmusicconnector@gmail"> projectmusicconnector@gmail.com </a></p>
             </div>
 			
 			<div class="linkCard">
