--- a/pastEvents.html
+++ b/pastEvents.html
@@ -45,6 +45,15 @@
     </div>
     
     <div id="page">
+        <h1> MakerFaire Atlanta 2017 </h1>
+        <p> October 23, 2017 </p>
+        <img src="images/makerFaire2017.JPG">
+
+        <h1> 2nd Annual MākEdu Conference 2017 </h1>
+        <p> October 22, 2017 </p>
+        <p> In a talk entitled "Project Music Connector: Making the Musical Instruments of the Future", we presented our work to an audience of educators, parents, and students, discussing our instruments, the lessons we learnt from building them, and how others can build upon our work.
+        <img src="images/jelloPiano_makEdu.jpg">
+
         <h1> Atlanta Science Festival </h1>
         <p> March 25, 2017 </p>
         <p> We presented the Jello Piano and Optical Turntable in a joint booth with <a href="https://earsketch.gatech.edu/">EarSketch</a>, sponsored by Georgia Tech and the Center for Music Technology of Georgia Tech. The 2017 Atlanta Science Festival drew over 41 000 visitors, making it the largest event we've done so far. </p>
