--- a/pastEvents.html
+++ b/pastEvents.html
@@ -45,6 +45,11 @@
     </div>
     
     <div id="page">
+		<h1> Renfroe Middle School </h1>
+		<p> December 8, 2017 </p>
+		<p> We were invited by Renfroe Middle School to talk to four classes of 7th- and 8th-graders about our musical instruments, concepts of sound, light, waves, engineering, design, and rapid prototyping.
+		<img src="images/renfroeMS.jpg">
+		
         <h1> MakerFaire Atlanta 2017 </h1>
         <p> October 23, 2017 </p>
         <img src="images/makerFaire2017.JPG">
