Add recent events

--- a/pastEvents.html
+++ b/pastEvents.html
@@ -45,9 +45,29 @@
     </div>
     
     <div id="page">
+		<h1> STEAM Leadership Conference </h1>
+		<p> March 22, 2018 (Organized by CEISMC at Georgia Tech)</p>
+		<p> Many thanks to CEISMC for sponsoring our appearance at the STEAM Leadership Conference!! We delivered a presentation entitled "Project Music Connector: Making the Musical Instruments of the Future", in which we discussed
+		the iterative learning process we used that allowed us to learn the skills necessary to build and present our musical instruments; and what educators can take away from our successes and failures. </p>
+		<p> <i> Abstract: Many teachers and educators struggle to engage or motivate students in STEAM or maker projects, and it is often difficult for
+			students to imagine the breadth of possibilities in using STEM skills and methods to express oneself artistically. This presentation will
+			demonstrate the creation of Project Music Connector, in which participants invent, design, and build new digital musical instruments
+			with the goals of democratizing music technology and presenting to children different ways that engineering can be used to create tools
+			for artistic expression.
+			This performance will lead the audience through Barbe and Fusaro’s journey of learning how to make new musical instruments,
+			and how they taught themselves the necessary technical skills and developed abilities to imagine new products that make musical
+			expression and exploration more accessible to people. The session will conclude by discussing how educators can effectively
+			implement iterative learning in STEAM/making projects as a way to foster students’ imaginations and help them make interdisciplinary
+			connections with the goal of enabling artistic expression. </i> </p>
+	
+		<h1> Rex Mills Middle School </h1>
+		<p> March 19, 2018 </p>
+		<p> We presented the Jello Piano, Optical Turntable, and Max Martenot to students of Rex Mills Middle School in their STEM Innovation Lab. </p>
+		<img src="images/rexmillsMS.jpg">
+		
 		<h1> Renfroe Middle School </h1>
 		<p> December 8, 2017 </p>
-		<p> We were invited by Renfroe Middle School to talk to four classes of 7th- and 8th-graders about our musical instruments, concepts of sound, light, waves, engineering, design, and rapid prototyping.
+		<p> We were invited by Renfroe Middle School to talk to four classes of 7th- and 8th-graders about our musical instruments, concepts of sound, light, waves, engineering, design, and rapid prototyping. </p>
 		<img src="images/renfroeMS.jpg">
 		
         <h1> MakerFaire Atlanta 2017 </h1>
@@ -56,7 +76,7 @@
 
         <h1> 2nd Annual MākEdu Conference 2017 </h1>
         <p> October 22, 2017 </p>
-        <p> In a talk entitled "Project Music Connector: Making the Musical Instruments of the Future", we presented our work to an audience of educators, parents, and students, discussing our instruments, the lessons we learnt from building them, and how others can build upon our work.
+        <p> In a talk entitled "Project Music Connector: Making the Musical Instruments of the Future", we presented our work to an audience of educators, parents, and students, discussing our instruments, the lessons we learnt from building them, and how others can build upon our work. </p>
         <img src="images/jelloPiano_makEdu.jpg">
 
         <h1> Atlanta Science Festival </h1>
