Image deletion per request

--- a/pastEvents.html
+++ b/pastEvents.html
@@ -100,8 +100,8 @@
         
         <h1> Atlanta Symphony Orchestra Family Sunday Program </h1>
         <p> November 22, 2015 </p>
-        <p> The Atlanta Symphony Orchestra invited us to present at one of their Family Sunday Programs, held in conjunction with the Alliance Theater and High Museum of Art. We presented the Jello Piano, WrapBeats, and GePS. We invited workshop participants to use the GePS to conduct a pre-recorded track and accompany Ruthie Miltenberger (Manager of Family Programs at the Atlanta Symphony Orchestra), playing the flute, and our very own Alice Barbe playing the cello, in Alice's arrangements of various classical pieces. </p>
-        <img src="images/ASOWorkshop.JPG">
+        <p> The Atlanta Symphony Orchestra invited us to present at one of their Family Sunday Programs, held in conjunction with the Alliance Theater and High Museum of Art. We presented the Jello Piano, WrapBeats, and GePS. We invited workshop participants to use the GePS to conduct a pre-recorded track and accompany live musicians. </p>
+        <!--<img src="images/ASOWorkshop.JPG">-->
         
         <h1> Georgia Tech Society of Women Engineers Middle School Outreach Program </h1>
         <p> November 7, 2015 </p>
