--- a/about.html
+++ b/about.html
@@ -57,12 +57,8 @@
 			Connector was received Maker of Merit awards in 2015 and 2016.</p>
             <br>
             <iframe width="560" height="315" src="https://www.youtube-nocookie.com/embed/MPidfmEVki0?rel=0" frameborder="0" allowfullscreen></iframe>
-            <br>
-			<p>Current members of the team include 
-			Alice Barbe, Kevin Choi, Beatriz Fusaro, Asimm Hirani, Abhirav Joshi, Elisha Mang, Mihir Parshionikar, 
-			Malvika Upadhyaya, and Samuel Yeomans. </p>
-            <br>
-            <p> Special thanks to the Georgia Tech School of Mathematics, Center for Music Technology, College of Science, Society for Women Engineers, Under the Couch, and GT Professors Joseph Bankoff and Lew Lefton. </p>
+            
+            <p> Special thanks to the Georgia Tech School of Mathematics, Center for Music Technology, College of Science, Society for Women Engineers, and Under the Couch. </p>
             <br>
             <p> Project Music Connector's Optical Turntable is proudly sponsored by Advanced Circuits. </p>
             <img src="images/advanced_circuits.jpg"></img>
