--- a/pastEvents.html
+++ b/pastEvents.html
@@ -45,6 +45,10 @@
     </div>
     
     <div id="page">
+		<h1> MakerFaire Atlanta 2018 </h1>
+        <p> October 27-28, 2018 </p>
+        <img src="images/makerFaire2018.jpeg">
+		
 		<h1> STEAM Leadership Conference </h1>
 		<p> March 22, 2018 (Organized by CEISMC at Georgia Tech)</p>
 		<p> Many thanks to CEISMC for sponsoring our appearance at the STEAM Leadership Conference!! We delivered a presentation entitled "Project Music Connector: Making the Musical Instruments of the Future", in which we discussed
