--- a/home.html
+++ b/home.html
@@ -13,6 +13,15 @@ __________.__                                    .___          /\ __            
  \____/|____/ |__|      \/\_/  \___  |___  /____  |__||__|  \___  > /\                                                          
                                    \/    \/     \/              \/  \/                                                          
 -->
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-108496813-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-108496813-1');
+</script>
 
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
